--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
     />
     <title>Vite + React</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
   </head>
   <body>
     <div id="root"></div>
